--- a/calc2.html
+++ b/calc2.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8" />
    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <link rel="stylesheet" href="Calc.css" />
+   <link rel="stylesheet" href="=calc.css" />
    <title>Calculator - By Code Traversal</title>
  </head>
  <body>
@@ -48,6 +48,6 @@
    </div>
 
 
-   <script src="Calc.js"></script>
+   <script src="calc.js"></script>
  </body>
 </html>
